Fix line height for analysis stats
Only affected non-responsive mode, but was too tall.

--- a/scss/site/_analysis_stats.scss
+++ b/scss/site/_analysis_stats.scss
@@ -30,6 +30,7 @@
     box-sizing: border-box;
     flex-wrap: wrap; // Looks terrible but needed to prevent overflow
     padding-bottom: $expander-height;
+    line-height: normal;
 
     &:empty {
         display: none;
